--- a/Wunderlist/Wunderlist.Web/Views/Account/Login.cshtml
+++ b/Wunderlist/Wunderlist.Web/Views/Account/Login.cshtml
@@ -1,46 +1,44 @@
 ﻿@model Wunderlist.Web.ViewModels.LoginViewModel
 
 @{
+    Layout = "~/Views/Account/_AccountLayout.cshtml";
     ViewBag.Title = "Login";
 }
+<div class="row">
+    <div class="col-md-5 col-md-offset-3" header>
+        <div class="logo">
+        </div>       
+    </div>
+</div>
 
-<h2>Login</h2>
+<div class="row wrapper">
+    <div class="col-md-4 col-md-offset-4">
+        @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @class = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })           
 
+            @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>LoginViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
+            @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
+            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+
+            <input type="submit" class="btn btn-primary" value="Login" />
+
+        }
+        <div class="row">
+            <div class="col-md-2">1</div>
+            <div class="col-md-2">2</div>
+            <div class="col-md-2">3</div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+        <div class="row">
+            <div class="col-md-11">
+                <p>Нет учетной записи?<a href="@Url.Action("Register","Account")">Создать учетную запись</a></p>
+                 
             </div>
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
