--- a/Wunderlist/Wunderlist.Web/Views/Account/Register.cshtml
+++ b/Wunderlist/Wunderlist.Web/Views/Account/Register.cshtml
@@ -1,63 +1,83 @@
 ﻿@model Wunderlist.Web.ViewModels.RegisterViewModel
 
 @{
+    Layout = "~/Views/Account/_AccountLayout.cshtml";
     ViewBag.Title = "Register";
 }
 
-<h2>Register</h2>
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>RegisterViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
+<div class="row">
+    <div class="col-md-5 col-md-offset-3" header>
+        <div class="logo">
         </div>
+        <h2>Получите Wunderlist бесплатно</h2>
+    </div>
+</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-            </div>
+<div class="row wrapper">
+    <div class="col-md-3 col-md-offset-2">
+        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            @Html.EditorFor(m => m.UserName, new { htmlAttributes = new { @class = "form-control", placeholder = "Name" } })
+            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger"})
+
+            @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger"})
+
+            @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
+            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger"})
+
+            <input type="submit" class="btn btn-primary" value="Create profile" />
+
+        }
+        <div class="row">
+            <div class="col-md-2">1</div>
+            <div class="col-md-2">2</div>
+            <div class="col-md-2">3</div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+        <div class="row">
+            <div class="col-md-11">
+                <p>Уже зарегистрированы? <a href="@Url.Action("Login","Account")">Вход</a></p>
             </div>
         </div>
     </div>
-}
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+   
+    <div class="col-md-1"><div id="vert"></div></div>
+    <div class="col-md-3">
+        <ul>
+            <li>
+                <span>Картинка</span>
+                <summary>Успевайте больше</summary>
+                Независимо от того, что вы собираетесь сделать: поделиться списком покупок с любимым человеком или поработать над проектом, — с помощью Wunderlist любое дело станет простым и приятным.
+
+            </li>
+            <li>
+                <span>Картинка</span>
+                <summary>Успевайте больше</summary>
+                Независимо от того, что вы собираетесь сделать: поделиться списком покупок с любимым человеком или поработать над проектом, — с помощью Wunderlist любое дело станет простым и приятным.
+
+            </li>
+            <li>
+                <span>Картинка</span>
+                <summary>Успевайте больше</summary>
+                Независимо от того, что вы собираетесь сделать: поделиться списком покупок с любимым человеком или поработать над проектом, — с помощью Wunderlist любое дело станет простым и приятным.
+
+            </li>
+        </ul>
+    </div>
 </div>
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+
+
+
+
+
