--- a/Wunderlist/Wunderlist.Web/Views/Account/Login.cshtml
+++ b/Wunderlist/Wunderlist.Web/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-5 col-md-offset-3" header>
         <div class="logo">
-        </div>       
+        </div>
     </div>
 </div>
 
@@ -16,12 +16,17 @@
         @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @class = "form" }))
         {
             @Html.AntiForgeryToken()
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })           
-
-            @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="input-group">
+                <span class="input-group-addon glyphicon glyphicon-envelope" id="envelope"></span>
+                @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+            </div>
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
 
-            @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
+            <div class="input-group">
+                <span class="input-group-addon glyphicon glyphicon-lock"></span>
+                @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
+            </div>
             @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
 
             <input type="submit" class="btn btn-primary" value="Login" />
@@ -35,7 +40,7 @@
         <div class="row">
             <div class="col-md-11">
                 <p>Нет учетной записи?<a href="@Url.Action("Register","Account")">Создать учетную запись</a></p>
-                 
+
             </div>
         </div>
     </div>
