--- a/Wunderlist/Wunderlist.Web/Content/register/register.css
+++ b/Wunderlist/Wunderlist.Web/Content/register/register.css
@@ -7,20 +7,28 @@ body {
 }
 
 input[type="submit"] {
+    width: 100%;
     margin: 0px auto;
 }
 
-.header{
- 
+li {
+    list-style-type: none;
 }
+
+ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.header {}
 
 .logo {
     margin-top: 20px;
-    margin-left:170px;
+    margin-left: 230px;
     width: 80px;
-    height: 80px;    
-    background-size: 80px; 
-    background-image: url('../imgs/wl_icon.png');
+    height: 80px;
+    background-size: 80px;
+    background-image: url('../assets/wl_icon.png');
 }
 
 #vert {
@@ -28,4 +36,23 @@ input[type="submit"] {
     width: 1px;
     border: none;
     border-left: 1px solid #000;
+}
+
+.input-group-addon:first-child {
+    position: static;
+}
+
+.external {
+    margin-top: 20px;
+}
+
+ul.benefits .icon {
+    font-size: 30px;
+    float: left;
+    display: inline-block;
+    width: 45px;
+}
+
+.details{
+    margin-left: 30px;
 }
