--- a/Wunderlist/Wunderlist.Web/Views/Account/Login.cshtml
+++ b/Wunderlist/Wunderlist.Web/Views/Account/Login.cshtml
@@ -4,6 +4,9 @@
     Layout = "~/Views/Account/_AccountLayout.cshtml";
     ViewBag.Title = "Login";
 }
+@section Style {
+    @Styles.Render("~/css/login")
+}
 <div class="row">
     <div class="col-md-5 col-md-offset-3" header>
         <div class="logo">
