--- a/Wunderlist/Wunderlist.Web/Views/Account/Login.cshtml
+++ b/Wunderlist/Wunderlist.Web/Views/Account/Login.cshtml
@@ -20,29 +20,31 @@
         {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="input-group">
-                <span class="input-group-addon glyphicon glyphicon-envelope" id="envelope"></span>
-                @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+            <div class="form-group">
+                <div class="input-group">
+                    <span class="input-group-addon glyphicon glyphicon-envelope" id="envelope"></span>
+                    @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+                </div>
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
-            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-
-            <div class="input-group">
-                <span class="input-group-addon glyphicon glyphicon-lock"></span>
-                @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
+            <div class="form-group">
+                <div class="input-group">
+                    <span class="input-group-addon glyphicon glyphicon-lock"></span>
+                    @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
+                </div>
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
-            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-
-            <input type="submit" class="btn btn-primary" value="Login" />
+                <input type="submit" class="btn btn-primary submit" value="Login" />
 
         }
-        <div class="row">
-            <div class="col-md-2">1</div>
-            <div class="col-md-2">2</div>
-            <div class="col-md-2">3</div>
+        <div class="row external">
+            <div class="col-md-4"><a class="btn btn-primary">Facebook</a></div>
+            <div class="col-md-4"><a class="btn btn-danger">Google</a></div>
+            <div class="col-md-4"><a class="btn btn-default">MicroSoft</a></div>
         </div>
-        <div class="row">
+        <div class="row external">
             <div class="col-md-11">
-                <p>Нет учетной записи?<a href="@Url.Action("Register","Account")">Создать учетную запись</a></p>
+                <p>Нет учетной записи?<a href="#">Создать учетную запись</a></p>
 
             </div>
         </div>
