--- a/Wunderlist/Wunderlist.Web/Views/Account/Register.cshtml
+++ b/Wunderlist/Wunderlist.Web/Views/Account/Register.cshtml
@@ -4,12 +4,16 @@
     Layout = "~/Views/Account/_AccountLayout.cshtml";
     ViewBag.Title = "Register";
 }
-
+@section Style {
+    @Styles.Render("~/css/register")
+}
 <div class="row">
-    <div class="col-md-5 col-md-offset-3" header>
-        <div class="logo">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3" header>
+            <div class="logo">
+            </div>
+            <h2 style="margin-left: 45px;">Получите Wunderlist бесплатно</h2>
         </div>
-        <h2>Получите Wunderlist бесплатно</h2>
     </div>
 </div>
 
@@ -20,51 +24,63 @@
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-            @Html.EditorFor(m => m.UserName, new { htmlAttributes = new { @class = "form-control", placeholder = "Name" } })
-            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger"})
+            <div class="form-group">
+                <div class="input-group">
+                    <span class="input-group-addon glyphicon glyphicon-tag"></span>
+                    @Html.EditorFor(m => m.UserName, new { htmlAttributes = new { @class = "form-control", placeholder = "Name" } })
+                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <span class="input-group-addon glyphicon glyphicon-envelope"></span>
+                    @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
 
-            @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
-            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger"})
 
-            @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
-            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger"})
+                </div>
+            </div>
 
-            <input type="submit" class="btn btn-primary" value="Create profile" />
+            <div class="form-group">
+                <div class="input-group">
+                    <span class="input-group-addon glyphicon glyphicon-tag"></span>
+                    @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+          
+
+            <input type="submit" class="btn btn-primary submit" value="Create profile" />
 
         }
-        <div class="row">
-            <div class="col-md-2">1</div>
-            <div class="col-md-2">2</div>
-            <div class="col-md-2">3</div>
+        <div class="row external">
+            <div class="col-md-4"><a class="btn btn-primary">Facebook</a></div>
+            <div class="col-md-4"><a class="btn btn-danger">Google</a></div>
+            <div class="col-md-4"><a class="btn btn-default">MicroSoft</a></div>
         </div>
-        <div class="row">
+        <div class="row external">
             <div class="col-md-11">
-                <p>Уже зарегистрированы? <a href="@Url.Action("Login","Account")">Вход</a></p>
+                <p>Уже зарегистрированы?<a href="#">Вход</a></p>
+
             </div>
         </div>
     </div>
 
    
-    <div class="col-md-1"><div id="vert"></div></div>
-    <div class="col-md-3">
-        <ul>
+    <div class="col-md-5">
+        <ul class="benefits">
             <li>
-                <span>Картинка</span>
-                <summary>Успевайте больше</summary>
-                Независимо от того, что вы собираетесь сделать: поделиться списком покупок с любимым человеком или поработать над проектом, — с помощью Wunderlist любое дело станет простым и приятным.
-
+                <span class="icon glyphicon glyphicon-ok"></span>
+                <div class="details">
+                    Успевайте больше Независимо от того, что вы собираетесь сделать: поделиться списком покупок с любимым человеком или поработать над проектом, — с помощью Wunderlist любое дело станет простым и приятным.
+                </div>
             </li>
             <li>
-                <span>Картинка</span>
-                <summary>Успевайте больше</summary>
-                Независимо от того, что вы собираетесь сделать: поделиться списком покупок с любимым человеком или поработать над проектом, — с помощью Wunderlist любое дело станет простым и приятным.
-
-            </li>
-            <li>
-                <span>Картинка</span>
-                <summary>Успевайте больше</summary>
-                Независимо от того, что вы собираетесь сделать: поделиться списком покупок с любимым человеком или поработать над проектом, — с помощью Wunderlist любое дело станет простым и приятным.
-
+                <span class="icon glyphicon glyphicon-ok"></span>
+                <div class="details">
+                    Успевайте больше Независимо от того, что вы собираетесь сделать: поделиться списком покупок с любимым человеком или поработать над проектом, — с помощью Wunderlist любое дело станет простым и приятным.
+                </div>
             </li>
         </ul>
     </div>
