--- a/Wunderlist/Wunderlist.Web/Views/Account/_AccountLayout.cshtml
+++ b/Wunderlist/Wunderlist.Web/Views/Account/_AccountLayout.cshtml
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
+    @Styles.Render("~/css/bootstrap")
     @RenderSection("style", required: false)   
-    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/script/modernizr")
 
 </head>
 <body>    
@@ -14,8 +15,8 @@
         @RenderBody()       
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/script/jquery")
+    @Scripts.Render("~/script/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
