--- a/Wunderlist/Wunderlist.Web/Views/Shared/_Layout.cshtml
+++ b/Wunderlist/Wunderlist.Web/Views/Shared/_Layout.cshtml
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title – приложение ASP.NET</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/css/bootstrap")
+    @Styles.Render("~/css/css")
+    @Scripts.Render("~/script/modernizr")
 
 </head>
 <body>
@@ -38,8 +39,8 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/script/jquery")
+    @Scripts.Render("~/script/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
