Made half of main page

--- a/Wunderlist/Epam.Wunderlist.Web/Views/Account/Login.cshtml
+++ b/Wunderlist/Epam.Wunderlist.Web/Views/Account/Login.cshtml
@@ -42,7 +42,7 @@
         </div>
         <div class="row external">
             <div class="col-md-11">
-                <p>Нет учетной записи?<a href="#">Создать учетную запись</a></p>
+                <p>Нет учетной записи?<a href="@Url.Action("Register","Account")">Создать учетную запись</a></p>
 
             </div>
         </div>
