Add @media support

--- a/Wunderlist/Epam.Wunderlist.Web/Content/webapp-media.css
+++ b/Wunderlist/Epam.Wunderlist.Web/Content/webapp-media.css
@@ -1,1 +1,11 @@
-﻿
+﻿@media screen and (max-width:550px){
+
+    .tasks{
+        position:absolute;
+        top:0;
+        bottom:0;
+        right:0;
+        left:-42px;
+    }
+
+}
