--- a/Wunderlist/Epam.Wunderlist.Web/Views/Home/WebApp.cshtml
+++ b/Wunderlist/Epam.Wunderlist.Web/Views/Home/WebApp.cshtml
@@ -4,19 +4,17 @@
 }
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="webApp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wunderlist</title>
     @Styles.Render("~/css/bootstrap")
     @Styles.Render("~/css/webapp")
-    @Scripts.Render("~/script/angular")
     @Scripts.Render("~/script/modernizr")
 </head>
 <body>
-
-    <div class="wrapper background">
+    <div class="wrapper background" ng-controller="mainCtrl as main">
         <div id="sidebar">
             <div class="sidebar-inner">
                 <div id="search-toolbar">
@@ -26,11 +24,21 @@
                     <a class="search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a>
                 </div>
                 <div id="user-toolbar">
-                    <a class="user">
-                        <span class="user-avatar"><img src="~/Content/imgs/av_demo.png" /></span>
-                        <span class="user-name">Винничек Кирилл</span>
-                        <span class="user-arrow glyphicon glyphicon-chevron-down"></span>
-                    </a>
+                    <div class="user-dropdown">
+                        <a class="user dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            <span class="user-avatar"><img src="~/Content/imgs/av_demo.png" /></span>
+                            <span class="user-name" ng-bind="user.UserName"></span>
+                            <span class="user-arrow glyphicon glyphicon-chevron-down"></span>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li class="dropdown-header">User menu</li>
+                            <li role="separator" class="divider"></li>
+                            <li><a ng-click="main.openUserModal()">User profile</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li class="dropdown-header" ng-bind="user.Email"></li>
+                            <li><a href="javascript:document.getElementById('logoutForm').submit()">Выйти</a></li>
+                        </ul>
+                    </div>
                     <div class="user-actions">
                         <a><span class="glyphicon glyphicon-bell"></span></a>
                         <a><span class="glyphicon glyphicon-phone-alt"></span></a>
@@ -66,31 +74,23 @@
                     </a>
                 </div>
             </div>
-            <div class="tasks-main">
-                <div class="add-task">
-                    <a><span class="glyphicon glyphicon-plus"></span></a>
-                    <input class="add-task-input" type="text" placeholder="Добавить задачу..." />
-                </div>
-                <div class="task-list"></div>
-                <h4 class="show-completed">
-                    <a>
-                        Показать завершенные задачи
-                    </a>
-                </h4>
-                @*comleted*@
-                <div class="task-list"></div>
-            </div>
+            <div ng-view></div>
 
         </div>
     </div>
 
-
+    @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "hidden" }))
+    {
+        @Html.AntiForgeryToken()
+    }
 
 
 
     @Scripts.Render("~/script/jquery")
     @Scripts.Render("~/script/jqueryval")
     @Scripts.Render("~/script/bootstrap")
+    @Scripts.Render("~/script/angular")
+    @Scripts.Render("~/script/webapp")
     <script>
         $(document).ready(function () {
             var $window = $(window),
