--- a/Wunderlist/Epam.Wunderlist.Web/Content/wunderlistCss/webapp.css
+++ b/Wunderlist/Epam.Wunderlist.Web/Content/wunderlistCss/webapp.css
@@ -2,6 +2,12 @@
     text-decoration: none;
 }
 
+ul {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+}
+
 a {
     cursor: pointer;
 }
@@ -52,6 +58,7 @@ input {
         flex-basis: 45px;
     }
 
+        #sidebar.collapsed .list-collection,
         #sidebar.collapsed .search,
         #sidebar.collapsed .user-name,
         #sidebar.collapsed .user-arrow,
@@ -105,7 +112,7 @@ input {
     }
 
 .user-dropdown .dropdown-menu {
-    left:5px;
+    left: 5px;
     top: inherit;
 }
 
@@ -113,11 +120,12 @@ input {
     color: #737272;
 }
 
-#user-toolbar img {
+.user-avatar img {
     width: 32px;
     height: 32px;
     border-radius: 50%;
 }
+
 
 #user-toolbar .user-name {
     padding-left: 5px;
@@ -145,8 +153,56 @@ input {
     }
 
 #lists {
+    margin-top: 10px;
+    margin-left: 10px;
     flex: 1;
+    display: flex;
+    flex-direction: column;
 }
+
+    #lists .list-collection {
+    }
+
+        #lists .list-collection a {
+            display: flex;
+            margin: 5px;
+            align-items: center;
+            justify-content: center;
+        }
+
+    #lists .list-icon {
+        color: #000000;
+        margin-right: 5px;
+        font-size: 20px;
+    }
+
+    #lists .title {
+        font-size: 15px;
+        font-weight: 400;
+        white-space: nowrap;
+        overflow: hidden;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+        color: #262626;
+        flex: 1;
+    }
+
+    #lists .count {
+        font-size: 12px;
+        padding-left: 4px;
+        padding-right: 4px;
+        color: #bdbcbb;
+    }
+
+    #lists .list-options {
+        padding: 5px;
+        font-size: 20px;
+        color: #b9b9b9;
+    }
+
+        #lists .list-options:hover {
+            color: #262626;
+        }
 
 .sidebar-actions {
     border-top: 1px solid rgba(0,0,0,0.1);
@@ -224,6 +280,57 @@ input {
     color: white;
 }
 
+.task-list {
+    padding-top: 10px;
+}
+
+    .task-list li {
+        height: 47px;
+    }
+
+    .task-list .task-item {
+        margin: 0.5px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        background: #fff;
+        height: 46px;
+    }
+
+    .task-list .task-checkbox {
+        padding: 0px 10px;
+    }
+
+        .task-list .task-checkbox span {
+            color: grey;
+            font-size: 20px;
+        }
+
+    .task-list .task-title {
+        white-space: nowrap;
+        overflow: hidden;
+        font-size: 15px;
+        font-weight: 500;
+        color: #262626;
+        flex: 1;
+    }
+
+    .task-list .task-date {
+        padding:0px 5px 0px 0px;
+        font-size: 12px;
+        color: #328ad6;
+        max-width: 200px;
+        white-space: nowrap;
+        overflow: hidden;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+    }
+
+    .task-list .task-mark span {
+        color: grey;
+        font-size: 20px;
+    }
+
 .show-completed {
     margin-top: 20px;
     margin-bottom: 10px;
@@ -243,4 +350,28 @@ input {
         font-weight: 400;
         line-height: 16px;
         border-radius: 3px;
+    }
+
+.task-404 {
+    border-radius: 10px;
+    margin: 0 25%;
+    background: rgba(0,0,0,0.25);
+    padding: 25px;
+    position: absolute;
+    left: 20%;
+    right: 0;
+    text-align: center;
+    top: 50%;
+    margin-top: -110px;
+}
+
+    .task-404 .glyphicon {
+        color: #fff;
+        font-size: 70px;
+    }
+
+    .task-404 h3 {
+        font-size: 18px;
+        color: rgba(255,255,255,0.85);
+        text-shadow: 0 1px 0 rgba(0,0,0,0.2);
     }
