--- a/Wunderlist/Epam.Wunderlist.Web/partials/taskDetails.html
+++ b/Wunderlist/Epam.Wunderlist.Web/partials/taskDetails.html
@@ -40,7 +40,7 @@
                 <span class="glyphicon glyphicon-ok"></span>
             </a>
             <div class="details-info">
-                <span>ty,Buht!</span>
+                <span>Спасибо тебе,Станислав.</span>
             </div>
             <a class="details-detele" ng-click="task.deleteTask()">
                 <span class="glyphicon glyphicon-trash"></span>
