--- a/Wunderlist/Epam.Wunderlist.Web/Views/Home/WebApp.cshtml
+++ b/Wunderlist/Epam.Wunderlist.Web/Views/Home/WebApp.cshtml
@@ -56,7 +56,7 @@
 
                     </ul>
                     <ul class="list-collection">
-                        <li class="lists-item" ng-repeat="taskList in user.taskLists" ng-drop="true" ng-drop-success="main.onDropComplete($index, $data,$event)" ng-class="{active: ('lists' | routeSegmentEqualsTo) && ('listId' | routeSegmentParam) == {{taskList.Id}}}">
+                        <li class="lists-item" ng-repeat="taskList in user.taskLists" ng-drop="!(('lists' | routeSegmentEqualsTo) && ('listId' | routeSegmentParam) == {{taskList.Id}})" ng-drop-success="main.onDropComplete($index, $data,$event)" ng-class="{active: ('lists' | routeSegmentEqualsTo) && ('listId' | routeSegmentParam) == {{taskList.Id}}}">
                             <a ng-href="#/lists/{{taskList.Id}}" ng-dblclick="main.openChangeListModal(taskList)">
                                 <span class="glyphicon glyphicon-th-list list-icon"></span>
                                 <span class="title" ng-bind="taskList.Name"></span>
@@ -77,7 +77,6 @@
             </div>
         </div>
         <div class="tasks">
-
             <div app-view-segment="0"></div>
         </div>
         <div app-view-segment="1"></div>
