--- a/Wunderlist/Epam.Wunderlist.Web/Views/Account/Register.cshtml
+++ b/Wunderlist/Epam.Wunderlist.Web/Views/Account/Register.cshtml
@@ -59,7 +59,7 @@
         </div>
         <div class="row external">
             <div class="col-md-11">
-                <p>Уже зарегистрированы?<a href="#">Вход</a></p>
+                <p>Уже зарегистрированы?<a href="@Url.Action("Login","Account")">Вход</a></p>
 
             </div>
         </div>
