--- a/Wunderlist/Epam.Wunderlist.Web/partials/taskDetails.html
+++ b/Wunderlist/Epam.Wunderlist.Web/partials/taskDetails.html
@@ -49,7 +49,7 @@
     </div>
     <div class="task-404" ng-show="task.is404">
         <span class="glyphicon glyphicon-exclamation-sign"></span>
-        <h3>Не удается найти список.</h3>
+        <h3>Не удается найти задачу.</h3>
     </div>
 </div>
 
