--- a/Wunderlist/Epam.Wunderlist.Web/Views/Home/Index.cshtml
+++ b/Wunderlist/Epam.Wunderlist.Web/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-    <title>project_for_beer</title>
+    <title>Wunderlist</title>
     <link rel="stylesheet" type="text/css" href="~/Content/wunderlistIndexCss/Index.css">
     <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.min.css">
 </head>
