--- a/Wunderlist/Epam.Wunderlist.Web/partials/list.html
+++ b/Wunderlist/Epam.Wunderlist.Web/partials/list.html
@@ -76,3 +76,9 @@
     <span class="glyphicon glyphicon-exclamation-sign"></span>
     <h3>Не удается найти список.</h3>
 </div>
+
+<div class="audio-complete" style="display:none;">
+    <audio id="player" class="hidden">
+        <source class="m4a" src="/Content/audio/wl3-complete.m4a" type="audio/mp4">
+    </audio>
+</div>
